# AceptacionUmbral

./: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  salida.txt
autom4te.cache/: output.0  requests  traces.0  traces.1
db/: hoc.db
etc/: config.cfg  muestra.cfg  muestra_canek.cfg
lib/: #ruta.c#  .#funcion.c  .#ruta.c  aceptacion.c  aceptacion.h  ciudad.c  ciudad.h  funcion.c  funcion.h  lote.c  lote.h  mapa.h  ruta.c  ruta.h  solucion.c  solucion.h  temperatura.c  temperatura.h
lib/.deps/: lib_libutils_a-aceptacion.Po  lib_libutils_a-ciudad.Po  lib_libutils_a-funcion.Po  lib_libutils_a-lote.Po  lib_libutils_a-mapa.Po  lib_libutils_a-ruta.Po  lib_libutils_a-solucion.Po  lib_libutils_a-temperatura.Po
scripts/: autotools.sh  delete-and-compile.sh  remove-autofiles.sh
src/: conexion.c  conexion.h  main  main.c
src/.deps/: conexion.Po  main.Po  src_main-conexion.Po  src_main-main.Po
test/: .#test-ciudad.c  test-ciudad  test-ciudad.c  test-ruta  test-ruta.c
test/.deps/: test_test_ciudad-test-ciudad.Po  test_test_ruta-test-ruta.Po
